--- a/app/views/spree/admin/blog_entries/index.html.erb
+++ b/app/views/spree/admin/blog_entries/index.html.erb
@@ -35,7 +35,7 @@
             <%= content_tag(:i, '', :class => 'fa fa-ok green') if blog_entry.visible %>
           </td>
           <td class="actions">
-            <%= link_to_blog_in_store blog_entry, :no_text => true, target: '_blank' %>
+            <%= link_to "View", blog_entry_permalink(blog_entry), target: '_blank' %>
             <%= link_to_edit blog_entry, :no_text => true %>
             <%= link_to_delete blog_entry, :no_text => true %>
           </td>
